@@ -1,3 +1,8 @@
+2008-02-25  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/page-wireless.c
+		- (page_wireless_new): fill in SSID
+
 2008-02-24  Dan Williams  <dcbw@redhat.com>
 
 	* src/connection-editor/nm-connection-list.c
